--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,26 +30,29 @@ button {
   font-weight: 500;
   background-color: black;
 }
-#lift-button-wrapper > div{
-  margin: 2rem;
+#lift-button-wrapper {
+  
 }
-#lift-button-wrapper > div > {
-  margin: 2rem;
+#lift-button-wrapper > div {
+  padding: 3rem;
+  width: 100%;
+  border: 2px solid black;
 }
 .lift {
-  width: 100px;
+  width: 80px;
   height: 100px;
-  background-color: red;
+  background-color: white;
   transition: 1s smooth;
   margin: 1rem;
   overflow: hidden;
+  border: 1px solid black;
 }
 .lift-door-wrapper {
   width: 100%;
   height: 100%;
 }
 .lift-door {
-  background: orange;
+  background: grey;
   width: 50%;
   height: 100%;
   float: left;
